# homework-server-bot

./: README.md  pyproject.toml
hikari_discord_bot/: bot.py
hikari_discord_bot/extensions/: bump.py  general.py  welcome.py
tests/: test_hikari_discord_bot.py
